_sass/_post.scss
.post-banner {
  display: flex;
  justify-content: center;
  width: 100%;
  position: relative;
  margin-top: 16px;
  margin-bottom:64px;

  img {
    border-radius: 4px;
    height: 60vh;
  }

  .post-banner-blur {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-repeat: no-repeat;
    background-size: 100% auto;
    background-position: center;
    filter: blur(10px);
    transform: scale(1.1);
    z-index: -1;
  }
}

article {
  width: calc(80% - 32px);
  margin-left: 10%;
  margin-right: 10%;
  margin-bottom: 25vh;

  .header{

    .post-title {
      font-size: 2rem;
    }

    .post-meta {
      font-size: 1rem;
    }

    .post-author {
      font-size: 1.2rem;
    }
  }

  .post-content {
    margin-top: 32px;

    p {
      font-size: 1.4rem;
    }

    img {
      height: 50vh;
      display: block;
      margin-left: auto;
      margin-right: auto;
      border-radius: 8px;
      box-shadow: 0 10px 30px rgba(0, 0, 0, .25);
    }

    ul, ol {
      color: #3a3a3a;
      font-family: sans-serif;
    }
  }
}

.post-tag-container {
  display: flex;
  flex-wrap: wrap;
  margin-top: 4px;

  .post-tag {
    margin: 0 8px 0 0;
    padding: 4px 8px;
    border-radius: 32px;
    background-color: #ff4d4d;
    color: #fff;
    box-shadow: 0 1px 3px rgba(0,0,0,.25);
  }
}

